feat: add data properties

--- a/dataSerialisation.ipynb
+++ b/dataSerialisation.ipynb
@@ -448,12 +448,12 @@
     "    Specie = URIRef(namespace + create_uri_component(\"specie\"+ str(specieId)))\n",
     "    \n",
     "    # Add triples using store's add() method.\n",
-    "    g.add((Specie, RDF.type, namespace.Character))\n",
+    "    g.add((Specie, RDF.type, namespace.Specie))\n",
     "    if row['name']:\n",
     "        g.add((Specie, RDFS.label, Literal(row['name'])))\n",
     "        g.add((Specie, namespace['name'], Literal(row['name'], datatype=XSD.string)))\n",
-    "    if row['classification']: g.add((Specie, namespace['classification'], Literal(row['classification'])))\n",
-    "    if row['average_height']: g.add((Specie, namespace['averageHeight'], Literal(row['average_height'])))\n",
+    "    if row['classification']: g.add((Specie, namespace['classification'], Literal(row['classification'], datatype=XSD.string)))\n",
+    "    if row['average_height']: g.add((Specie, namespace['averageHeight'], Literal(row['average_height'], datatype=XSD.integer)))\n",
     "    \n",
     "    if row['skin_colors']:\n",
     "        skinColorsSeparated = [value.strip() for value in row['skin_colors'].split(',')]\n",
@@ -470,8 +470,9 @@
     "        for eyeColor in eyeColorsSeparated:\n",
     "            g.add((Specie, namespace['eyeColor'], Literal(eyeColor)))\n",
     "    \n",
-    "    if row['average_lifespan']: g.add((Specie, namespace['averageLifespan'], Literal(row['average_lifespan'])))\n",
-    "    if row['language']: g.add((Specie, namespace['language'], Literal(row['language'])))\n",
+    "    if row['average_lifespan'] and isinstance(row['average_lifespan'], int): \n",
+    "        g.add((Specie, namespace['averageLifespan'], Literal(row['average_lifespan'], datatype=XSD.integer)))\n",
+    "    if row['language']: g.add((Specie, namespace['language'], Literal(row['language'], datatype=XSD.string)))\n",
     "    \n",
     "    # Extract id from hometown api url\n",
     "    planetId = extract_number(row['homeworld'])\n",
@@ -660,26 +661,26 @@
     "    if row['name']:\n",
     "        g.add((Character, RDFS.label, Literal(row['name'])))\n",
     "        g.add((Character, namespace['name'], Literal(row['name'], datatype=XSD.string)))\n",
-    "    if row['height']: g.add((Character, namespace['height'], Literal(row['height'])))\n",
-    "    if row['mass']: g.add((Character, namespace['mass'], Literal(row['mass'])))\n",
+    "    if row['height']: g.add((Character, namespace['height'], Literal(row['height'], datatype=XSD.integer)))\n",
+    "    if row['mass']: g.add((Character, namespace['mass'], Literal(row['mass'], datatype=XSD.float)))\n",
     "\n",
     "    if row['skin_color']:\n",
     "        skinColorsSeparated = [value.strip() for value in row['skin_color'].split(',')]\n",
     "        for skinColor in skinColorsSeparated:\n",
-    "            g.add((Character, namespace['skinColor'], Literal(skinColor)))\n",
+    "            g.add((Character, namespace['skinColor'], Literal(skinColor, datatype=XSD.string)))\n",
     "\n",
     "    if row['hair_color']:\n",
     "        hairColorsSeparated = [value.strip() for value in row['hair_color'].split(',')]\n",
     "        for hairColor in hairColorsSeparated:\n",
-    "            g.add((Character, namespace['hairColor'], Literal(hairColor)))\n",
+    "            g.add((Character, namespace['hairColor'], Literal(hairColor, datatype=XSD.string)))\n",
     "\n",
     "    if row['eye_color']:\n",
     "        eyeColorsSeparated = [value.strip() for value in row['eye_color'].split(',')]\n",
     "        for eyeColor in eyeColorsSeparated:\n",
-    "            g.add((Character, namespace['eyeColor'], Literal(eyeColor)))\n",
+    "            g.add((Character, namespace['eyeColor'], Literal(eyeColor, datatype=XSD.string)))\n",
     "            \n",
-    "    if row['birth_year']: g.add((Character, namespace['birthYear'], Literal(row['birth_year'])))\n",
-    "    if row['gender']: g.add((Character, namespace['gender'], Literal(row['gender'])))\n",
+    "    if row['birth_year']: g.add((Character, namespace['birthYear'], Literal(row['birth_year'], datatype=XSD.string)))\n",
+    "    if row['gender']: g.add((Character, namespace['gender'], Literal(row['gender'], datatype=XSD.string)))\n",
     "\n",
     "    # Extract id from hometown api url\n",
     "    planetId = extract_number(row['homeworld'])\n",
